# ai-agent-gw-2

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: ci.yml
controller/: OllamaController.cpp  OllamaController.h
service/: OllamaService.cpp  OllamaService.h
test_shell/: test_api.sh
tests/: test_ollama_service.cpp
